@@ -1,7 +1,7 @@
 use lib 'inc';
 
 use Net::SSLeay;
-use Test::Net::SSLeay;
+use Test::Net::SSLeay qw(initialise_libssl);
 
 eval 'use Test::Exception';
 if ($@) {
@@ -10,10 +10,7 @@ if ($@) {
     plan tests => 14;
 }
 
-Net::SSLeay::randomize();
-Net::SSLeay::load_error_strings();
-Net::SSLeay::ERR_load_crypto_strings();
-Net::SSLeay::SSLeay_add_ssl_algorithms();
+initialise_libssl();
 
 lives_ok(sub {
         Net::SSLeay::RSA_generate_key(2048, 0x10001);
