@@ -1,7 +1,9 @@
 use lib 'inc';
 
 use Net::SSLeay;
-use Test::Net::SSLeay qw(can_fork data_file_path tcp_socket);
+use Test::Net::SSLeay qw(
+    can_fork data_file_path initialise_libssl tcp_socket
+);
 
 if (not can_fork()) {
     plan skip_all => "fork() not supported on this system";
@@ -9,12 +11,13 @@ if (not can_fork()) {
     plan tests => 2;
 }
 
+initialise_libssl();
+
 my $pid;
 alarm(30);
 END { kill 9,$pid if $pid }
 
 my $server = tcp_socket();
-Net::SSLeay::initialize();
 
 {
     # SSL server - just handle single connect and  shutdown connection
