@@ -3,7 +3,9 @@
 use lib 'inc';
 
 use Net::SSLeay;
-use Test::Net::SSLeay qw(can_fork data_file_path tcp_socket);
+use Test::Net::SSLeay qw(
+    can_fork data_file_path initialise_libssl tcp_socket
+);
 
 use Storable;
 
@@ -15,6 +17,8 @@ if (not can_fork()) {
     plan tests => 36;
 }
 
+initialise_libssl();
+
 my $pid;
 alarm(30);
 END { kill 9,$pid if $pid }
@@ -23,7 +27,6 @@ my @rounds = qw(TLSv1 TLSv1.1 TLSv1.2 TLSv1.3);
 my (%server_stats, %client_stats);
 
 my ($server_ctx, $client_ctx, $server_ssl, $client_ssl);
-Net::SSLeay::initialize();
 
 my $server = tcp_socket();
 
